[project]
name = "railcall"
version = "0.1.0"
description = "Central Python controller for managing Beeton Decoder-based train networks"
authors = [
    { name="Collin Barker", email="you@example.com" }
]
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
