[project]
name = "railcall"
version = "0.1.0"
description = "Rail network controller for Beeton Decoders"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{ name="Collin Barker", email="97cweb@gmail.com" }]

dependencies = [
    "adafruit-blinka",
    "RPi.GPIO",
    "adafruit-circuitpython-pca9554",
]

[project.urls]
Homepage = "https://github.com/97cweb/RailCall"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["railcall"]  # or use find: {include = ["railcall*"]}
